lexion_lang/tests/snapshots/x86_machine__x86_machine_code_aggregate_member_values.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: machine_snapshot(&code)
snapshot_kind: text
---
symbols:
main=0x0000

bytes:
55 48 89 E5 48 81 EC 60 01 00 00 B8 0B 00 00 00 89 85 1C FF FF FF B8 17 00 00 00 89 85 08 FF FF FF 48 8D 85 1C FF FF FF 48 89 45 A8 48 8B 45 A8 48 89 45 F0 B8 03 00 00 00 89 85 70 FF FF FF B8 04 00 00 00 89 85 74 FF FF FF 8B 85 70 FF FF FF 89 45 F8 8B 85 74 FF FF FF 89 45 FC 8B 45 F0 89 85 F8 FE FF FF 8B 45 F4 89 85 FC FE FF FF 8B 45 F8 89 85 00 FF FF FF 8B 45 FC 89 85 04 FF FF FF 8B 85 F8 FE FF FF 89 85 E8 FE FF FF 8B 85 FC FE FF FF 89 85 EC FE FF FF 8B 85 00 FF FF FF 89 85 F0 FE FF FF 8B 85 04 FF FF FF 89 85 F4 FE FF FF 48 8D 85 08 FF FF FF 48 89 85 60 FF FF FF 48 8B 85 60 FF FF FF 48 89 85 E8 FE FF FF B8 07 00 00 00 89 85 58 FF FF FF B8 08 00 00 00 89 85 5C FF FF FF 8B 85 58 FF FF FF 89 85 F0 FE FF FF 8B 85 5C FF FF FF 89 85 F4 FE FF FF 48 8B 85 E8 FE FF FF 48 89 85 50 FF FF FF 48 8B 85 50 FF FF FF 48 89 85 D0 FE FF FF 8B 85 F0 FE FF FF 89 85 48 FF FF FF 8B 85 F4 FE FF FF 89 85 4C FF FF FF 8B 85 48 FF FF FF 89 85 E0 FE FF FF 8B 85 4C FF FF FF 89 85 E4 FE FF FF 8B 85 F0 FE FF FF 89 85 40 FF FF FF 8B 85 F4 FE FF FF 89 85 44 FF FF FF 8B 85 40 FF FF FF 89 85 D8 FE FF FF 8B 85 44 FF FF FF 89 85 DC FE FF FF B8 09 00 00 00 89 85 D8 FE FF FF 48 8D 85 1C FF FF FF 48 89 45 E8 48 8B 45 E8 48 89 85 30 FF FF FF B8 05 00 00 00 89 45 E0 B8 06 00 00 00 89 45 E4 8B 45 E0 89 85 38 FF FF FF 8B 45 E4 89 85 3C FF FF FF 8B 85 30 FF FF FF 89 85 C0 FE FF FF 8B 85 34 FF FF FF 89 85 C4 FE FF FF 8B 85 38 FF FF FF 89 85 C8 FE FF FF 8B 85 3C FF FF FF 89 85 CC FE FF FF 8B 85 C0 FE FF FF 89 85 B0 FE FF FF 8B 85 C4 FE FF FF 89 85 B4 FE FF FF 8B 85 C8 FE FF FF 89 85 B8 FE FF FF 8B 85 CC FE FF FF 89 85 BC FE FF FF 48 8D 85 08 FF FF FF 48 89 45 D8 48 8B 45 D8 48 89 85 B0 FE FF FF B8 0A 00 00 00 89 45 D0 B8 0C 00 00 00 89 45 D4 8B 45 D0 89 85 B8 FE FF FF 8B 45 D4 89 85 BC FE FF FF 8B 85 B8 FE FF FF 89 45 C8 8B 85 BC FE FF FF 89 45 CC 8B 45 C8 89 85 A8 FE FF FF 8B 45 CC 89 85 AC FE FF FF B8 0E 00 00 00 89 85 A8 FE FF FF 48 8B 85 F8 FE FF FF 48 89 45 C0 48 8B 45 C0 8B 00 89 45 BC 8B 45 BC 89 85 0C FF FF FF 48 8B 85 D0 FE FF FF 8B 00 89 45 B8 8B 45 B8 89 85 2C FF FF FF 8B 85 E0 FE FF FF 89 45 B4 8B 45 B4 89 85 20 FF FF FF 8B 85 D8 FE FF FF 89 45 B0 8B 45 B0 89 85 14 FF FF FF 8B 85 C8 FE FF FF 89 45 A4 8B 45 A4 89 85 10 FF FF FF 48 8B 85 B0 FE FF FF 48 89 45 98 48 8B 45 98 8B 00 89 45 94 8B 45 94 89 85 28 FF FF FF 8B 85 B8 FE FF FF 89 45 90 8B 45 90 89 85 24 FF FF FF 8B 85 A8 FE FF FF 89 45 8C 8B 45 8C 89 85 18 FF FF FF 8B 85 0C FF FF FF 03 85 2C FF FF FF 89 45 88 8B 45 88 03 85 20 FF FF FF 89 45 84 8B 45 84 03 85 14 FF FF FF 89 45 80 8B 45 80 03 85 10 FF FF FF 89 85 7C FF FF FF 8B 85 7C FF FF FF 03 85 28 FF FF FF 89 85 78 FF FF FF 8B 85 78 FF FF FF 03 85 24 FF FF FF 89 85 6C FF FF FF 8B 85 6C FF FF FF 03 85 18 FF FF FF 89 85 68 FF FF FF 8B 85 68 FF FF FF 48 89 EC 5D C3

disassembly:
main:
0000: push rbp
0001: mov rbp,rsp
0004: sub rsp,160h
000B: mov eax,0Bh
0010: mov [rbp-0E4h],eax
0016: mov eax,17h
001B: mov [rbp-0F8h],eax
0021: lea rax,[rbp-0E4h]
0028: mov [rbp-58h],rax
002C: mov rax,[rbp-58h]
0030: mov [rbp-10h],rax
0034: mov eax,3
0039: mov [rbp-90h],eax
003F: mov eax,4
0044: mov [rbp-8Ch],eax
004A: mov eax,[rbp-90h]
0050: mov [rbp-8],eax
0053: mov eax,[rbp-8Ch]
0059: mov [rbp-4],eax
005C: mov eax,[rbp-10h]
005F: mov [rbp-108h],eax
0065: mov eax,[rbp-0Ch]
0068: mov [rbp-104h],eax
006E: mov eax,[rbp-8]
0071: mov [rbp-100h],eax
0077: mov eax,[rbp-4]
007A: mov [rbp-0FCh],eax
0080: mov eax,[rbp-108h]
0086: mov [rbp-118h],eax
008C: mov eax,[rbp-104h]
0092: mov [rbp-114h],eax
0098: mov eax,[rbp-100h]
009E: mov [rbp-110h],eax
00A4: mov eax,[rbp-0FCh]
00AA: mov [rbp-10Ch],eax
00B0: lea rax,[rbp-0F8h]
00B7: mov [rbp-0A0h],rax
00BE: mov rax,[rbp-0A0h]
00C5: mov [rbp-118h],rax
00CC: mov eax,7
00D1: mov [rbp-0A8h],eax
00D7: mov eax,8
00DC: mov [rbp-0A4h],eax
00E2: mov eax,[rbp-0A8h]
00E8: mov [rbp-110h],eax
00EE: mov eax,[rbp-0A4h]
00F4: mov [rbp-10Ch],eax
00FA: mov rax,[rbp-118h]
0101: mov [rbp-0B0h],rax
0108: mov rax,[rbp-0B0h]
010F: mov [rbp-130h],rax
0116: mov eax,[rbp-110h]
011C: mov [rbp-0B8h],eax
0122: mov eax,[rbp-10Ch]
0128: mov [rbp-0B4h],eax
012E: mov eax,[rbp-0B8h]
0134: mov [rbp-120h],eax
013A: mov eax,[rbp-0B4h]
0140: mov [rbp-11Ch],eax
0146: mov eax,[rbp-110h]
014C: mov [rbp-0C0h],eax
0152: mov eax,[rbp-10Ch]
0158: mov [rbp-0BCh],eax
015E: mov eax,[rbp-0C0h]
0164: mov [rbp-128h],eax
016A: mov eax,[rbp-0BCh]
0170: mov [rbp-124h],eax
0176: mov eax,9
017B: mov [rbp-128h],eax
0181: lea rax,[rbp-0E4h]
0188: mov [rbp-18h],rax
018C: mov rax,[rbp-18h]
0190: mov [rbp-0D0h],rax
0197: mov eax,5
019C: mov [rbp-20h],eax
019F: mov eax,6
01A4: mov [rbp-1Ch],eax
01A7: mov eax,[rbp-20h]
01AA: mov [rbp-0C8h],eax
01B0: mov eax,[rbp-1Ch]
01B3: mov [rbp-0C4h],eax
01B9: mov eax,[rbp-0D0h]
01BF: mov [rbp-140h],eax
01C5: mov eax,[rbp-0CCh]
01CB: mov [rbp-13Ch],eax
01D1: mov eax,[rbp-0C8h]
01D7: mov [rbp-138h],eax
01DD: mov eax,[rbp-0C4h]
01E3: mov [rbp-134h],eax
01E9: mov eax,[rbp-140h]
01EF: mov [rbp-150h],eax
01F5: mov eax,[rbp-13Ch]
01FB: mov [rbp-14Ch],eax
0201: mov eax,[rbp-138h]
0207: mov [rbp-148h],eax
020D: mov eax,[rbp-134h]
0213: mov [rbp-144h],eax
0219: lea rax,[rbp-0F8h]
0220: mov [rbp-28h],rax
0224: mov rax,[rbp-28h]
0228: mov [rbp-150h],rax
022F: mov eax,0Ah
0234: mov [rbp-30h],eax
0237: mov eax,0Ch
023C: mov [rbp-2Ch],eax
023F: mov eax,[rbp-30h]
0242: mov [rbp-148h],eax
0248: mov eax,[rbp-2Ch]
024B: mov [rbp-144h],eax
0251: mov eax,[rbp-148h]
0257: mov [rbp-38h],eax
025A: mov eax,[rbp-144h]
0260: mov [rbp-34h],eax
0263: mov eax,[rbp-38h]
0266: mov [rbp-158h],eax
026C: mov eax,[rbp-34h]
026F: mov [rbp-154h],eax
0275: mov eax,0Eh
027A: mov [rbp-158h],eax
0280: mov rax,[rbp-108h]
0287: mov [rbp-40h],rax
028B: mov rax,[rbp-40h]
028F: mov eax,[rax]
0291: mov [rbp-44h],eax
0294: mov eax,[rbp-44h]
0297: mov [rbp-0F4h],eax
029D: mov rax,[rbp-130h]
02A4: mov eax,[rax]
02A6: mov [rbp-48h],eax
02A9: mov eax,[rbp-48h]
02AC: mov [rbp-0D4h],eax
02B2: mov eax,[rbp-120h]
02B8: mov [rbp-4Ch],eax
02BB: mov eax,[rbp-4Ch]
02BE: mov [rbp-0E0h],eax
02C4: mov eax,[rbp-128h]
02CA: mov [rbp-50h],eax
02CD: mov eax,[rbp-50h]
02D0: mov [rbp-0ECh],eax
02D6: mov eax,[rbp-138h]
02DC: mov [rbp-5Ch],eax
02DF: mov eax,[rbp-5Ch]
02E2: mov [rbp-0F0h],eax
02E8: mov rax,[rbp-150h]
02EF: mov [rbp-68h],rax
02F3: mov rax,[rbp-68h]
02F7: mov eax,[rax]
02F9: mov [rbp-6Ch],eax
02FC: mov eax,[rbp-6Ch]
02FF: mov [rbp-0D8h],eax
0305: mov eax,[rbp-148h]
030B: mov [rbp-70h],eax
030E: mov eax,[rbp-70h]
0311: mov [rbp-0DCh],eax
0317: mov eax,[rbp-158h]
031D: mov [rbp-74h],eax
0320: mov eax,[rbp-74h]
0323: mov [rbp-0E8h],eax
0329: mov eax,[rbp-0F4h]
032F: add eax,[rbp-0D4h]
0335: mov [rbp-78h],eax
0338: mov eax,[rbp-78h]
033B: add eax,[rbp-0E0h]
0341: mov [rbp-7Ch],eax
0344: mov eax,[rbp-7Ch]
0347: add eax,[rbp-0ECh]
034D: mov [rbp-80h],eax
0350: mov eax,[rbp-80h]
0353: add eax,[rbp-0F0h]
0359: mov [rbp-84h],eax
035F: mov eax,[rbp-84h]
0365: add eax,[rbp-0D8h]
036B: mov [rbp-88h],eax
0371: mov eax,[rbp-88h]
0377: add eax,[rbp-0DCh]
037D: mov [rbp-94h],eax
0383: mov eax,[rbp-94h]
0389: add eax,[rbp-0E8h]
038F: mov [rbp-98h],eax
0395: mov eax,[rbp-98h]
039B: mov rsp,rbp
039E: pop rbp
039F: ret
