lexion_lang/tests/snapshots/x86_machine__x86_machine_code_aggregate_reference_places.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: "machine_snapshot(&compile_machine_code(\"backend/x86_aggregate_reference_places.lex\"))"
snapshot_kind: text
---
symbols:
main=0x0000

bytes:
55 48 89 E5 48 81 EC 80 00 00 00 B8 01 00 00 00 89 45 F4 B8 02 00 00 00 89 45 F8 B8 03 00 00 00 89 45 FC 8B 45 F4 89 45 84 8B 45 F8 89 45 88 8B 45 FC 89 45 8C 48 8D 45 84 48 89 45 E8 48 8B 45 E8 48 89 45 90 48 8B 45 90 8B 08 89 4D DC 8B 48 04 89 4D E0 8B 48 08 89 4D E4 8B 45 DC 89 45 A8 8B 45 E0 89 45 AC 8B 45 E4 89 45 B0 B8 04 00 00 00 89 45 D0 B8 05 00 00 00 89 45 D4 B8 06 00 00 00 89 45 D8 48 8B 45 90 8B 4D D0 89 08 8B 4D D4 89 48 04 8B 4D D8 89 48 08 48 8B 45 90 8B 08 89 4D C4 8B 48 04 89 4D C8 8B 48 08 89 4D CC 8B 45 C4 89 45 9C 8B 45 C8 89 45 A0 8B 45 CC 89 45 A4 8B 45 A8 89 45 C0 8B 45 A0 89 45 BC 8B 45 C0 03 45 BC 89 45 B8 8B 45 A4 89 45 B4 8B 45 B8 03 45 B4 89 45 F0 8B 45 F0 48 89 EC 5D C3

disassembly:
main:
0000: push rbp
0001: mov rbp,rsp
0004: sub rsp,80h
000B: mov eax,1
0010: mov [rbp-0Ch],eax
0013: mov eax,2
0018: mov [rbp-8],eax
001B: mov eax,3
0020: mov [rbp-4],eax
0023: mov eax,[rbp-0Ch]
0026: mov [rbp-7Ch],eax
0029: mov eax,[rbp-8]
002C: mov [rbp-78h],eax
002F: mov eax,[rbp-4]
0032: mov [rbp-74h],eax
0035: lea rax,[rbp-7Ch]
0039: mov [rbp-18h],rax
003D: mov rax,[rbp-18h]
0041: mov [rbp-70h],rax
0045: mov rax,[rbp-70h]
0049: mov ecx,[rax]
004B: mov [rbp-24h],ecx
004E: mov ecx,[rax+4]
0051: mov [rbp-20h],ecx
0054: mov ecx,[rax+8]
0057: mov [rbp-1Ch],ecx
005A: mov eax,[rbp-24h]
005D: mov [rbp-58h],eax
0060: mov eax,[rbp-20h]
0063: mov [rbp-54h],eax
0066: mov eax,[rbp-1Ch]
0069: mov [rbp-50h],eax
006C: mov eax,4
0071: mov [rbp-30h],eax
0074: mov eax,5
0079: mov [rbp-2Ch],eax
007C: mov eax,6
0081: mov [rbp-28h],eax
0084: mov rax,[rbp-70h]
0088: mov ecx,[rbp-30h]
008B: mov [rax],ecx
008D: mov ecx,[rbp-2Ch]
0090: mov [rax+4],ecx
0093: mov ecx,[rbp-28h]
0096: mov [rax+8],ecx
0099: mov rax,[rbp-70h]
009D: mov ecx,[rax]
009F: mov [rbp-3Ch],ecx
00A2: mov ecx,[rax+4]
00A5: mov [rbp-38h],ecx
00A8: mov ecx,[rax+8]
00AB: mov [rbp-34h],ecx
00AE: mov eax,[rbp-3Ch]
00B1: mov [rbp-64h],eax
00B4: mov eax,[rbp-38h]
00B7: mov [rbp-60h],eax
00BA: mov eax,[rbp-34h]
00BD: mov [rbp-5Ch],eax
00C0: mov eax,[rbp-58h]
00C3: mov [rbp-40h],eax
00C6: mov eax,[rbp-60h]
00C9: mov [rbp-44h],eax
00CC: mov eax,[rbp-40h]
00CF: add eax,[rbp-44h]
00D2: mov [rbp-48h],eax
00D5: mov eax,[rbp-5Ch]
00D8: mov [rbp-4Ch],eax
00DB: mov eax,[rbp-48h]
00DE: add eax,[rbp-4Ch]
00E1: mov [rbp-10h],eax
00E4: mov eax,[rbp-10h]
00E7: mov rsp,rbp
00EA: pop rbp
00EB: ret
