lexion_lang/tests/snapshots/x86_machine__x86_machine_code_char_values.snap
---
source: lexion_lang/tests/x86_machine.rs
expression: machine_snapshot(&code)
snapshot_kind: text
---
symbols:
main=0x0050
pass=0x0000
select=0x0019

bytes:
55 48 89 E5 48 83 EC 10 89 7D F8 8B 45 F8 89 45 FC 8B 45 FC 48 89 EC 5D C3 55 48 89 E5 48 83 EC 20 89 7D F4 89 75 F0 89 55 F8 B8 00 00 00 00 3B 45 F8 74 08 8B 45 F4 89 45 FC EB 06 8B 45 F0 89 45 FC 8B 45 FC 89 45 EC 8B 45 EC 48 89 EC 5D C3 55 48 89 E5 48 83 EC 20 89 7D EC 89 75 F4 8B 7D EC 8B 75 F4 BA 01 00 00 00 E8 AB FF FF FF 89 45 FC 8B 45 FC 89 45 F0 8B 7D F0 E8 81 FF FF FF 89 45 F8 8B 45 F8 48 89 EC 5D C3

disassembly:
pass:
0000: push rbp
0001: mov rbp,rsp
0004: sub rsp,10h
0008: mov [rbp-8],edi
000B: mov eax,[rbp-8]
000E: mov [rbp-4],eax
0011: mov eax,[rbp-4]
0014: mov rsp,rbp
0017: pop rbp
0018: ret
select:
0019: push rbp
001A: mov rbp,rsp
001D: sub rsp,20h
0021: mov [rbp-0Ch],edi
0024: mov [rbp-10h],esi
0027: mov [rbp-8],edx
002A: mov eax,0
002F: cmp eax,[rbp-8]
0032: je short 000000000000003Ch
0034: mov eax,[rbp-0Ch]
0037: mov [rbp-4],eax
003A: jmp short 0000000000000042h
003C: mov eax,[rbp-10h]
003F: mov [rbp-4],eax
0042: mov eax,[rbp-4]
0045: mov [rbp-14h],eax
0048: mov eax,[rbp-14h]
004B: mov rsp,rbp
004E: pop rbp
004F: ret
main:
0050: push rbp
0051: mov rbp,rsp
0054: sub rsp,20h
0058: mov [rbp-14h],edi
005B: mov [rbp-0Ch],esi
005E: mov edi,[rbp-14h]
0061: mov esi,[rbp-0Ch]
0064: mov edx,1
0069: call 0000000000000019h <select>
006E: mov [rbp-4],eax
0071: mov eax,[rbp-4]
0074: mov [rbp-10h],eax
0077: mov edi,[rbp-10h]
007A: call 0 <pass>
007F: mov [rbp-8],eax
0082: mov eax,[rbp-8]
0085: mov rsp,rbp
0088: pop rbp
0089: ret
